<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow>
            <Button
                android:id="@+id/PlayerOne"
                android:background="#C2EBFF"
                android:layout_width="0dip"
                android:layout_height="170dip"
                android:layout_weight="1"
                android:text="@string/OnePlayerButton"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/PlayerTwo"
                android:background="#CCFFCC"
                android:layout_width="0dip"
                android:layout_height="170dip"
                android:layout_weight="1"
                android:text="@string/TwoPlayerButton"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/PlayerThree"
                android:background="#FFC2FF"
                android:layout_width="0dip"
                android:layout_height="170dip"
                android:layout_weight="1"
                android:text="@string/ThreePlayerButton"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
