<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ReflexActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WelcomeText"
        android:id="@+id/WelcomeToTheApp"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReactionTest"
        android:id="@+id/ReactionTestButton"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:layout_below="@+id/WelcomeToTheApp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="startReactionTest"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameShow"
        android:id="@+id/GameShowButton"
        android:layout_marginTop="63dp"
        android:textSize="18sp"
        android:layout_below="@+id/ReactionTestButton"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ReactionTestButton"
        android:onClick="startGameShow"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Statistics"
        android:id="@+id/StatisticsButton"
        android:textSize="18sp"
        android:layout_below="@+id/GameShowButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:layout_alignParentEnd="true"
        android:onClick="showStatistics"/>

</RelativeLayout>
